- fixed: wrap padding for elementor pages

--- a/assets/styles/components/_grid.scss
+++ b/assets/styles/components/_grid.scss
@@ -10,7 +10,8 @@
 }
 
 .home,
-.page-template-template-elementor {
+.page-template-template-elementor,
+.elementor-page {
   .main {
     padding: 0;
   }
@@ -50,7 +51,8 @@
     padding-bottom: 40px;
   }
   .home,
-  .page-template-template-elementor {
+  .page-template-template-elementor,
+  .elementor-page{
     .wrap {
       padding-top: 0;
       padding-bottom: 0;
